<resources>

    <string name="app_name">TaxiConductor</string>
    <string name="sign_in">REGISTRARSE</string>
    <string name="email">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="remember_password">¿Olvidaste tu contraseña?</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="phone_number">Número de celular</string>
    <string name="policies">Políticas de privacidad</string>
    <string name="title_activity_home">Home</string>
    <string name="estatus_icon">Estatus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logoff">Cerrar sesión</string>
    <string name="username_error">Ingresa usuario</string>
    <string name="password_error">Ingresa contraseña</string>
    <string name="detail_user_session">Usted ha ingresado cómo usuario:</string>
    <string name="petitions">Peticiones</string>
    <string name="occupied">Ocupado</string>
    <string name="development_for">Desarrollado por</string>
    <string name="version">v1.0</string>
    <string name="travels">Viajes</string>
    <string name="action_travels">Viajes</string>
</resources>
