<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.taxiconductor.View.ViewHome.HomeActivity">

    <TextView
        android:id="@+id/textView_id_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView_Version"
        android:layout_width="match_parent"
        android:text="@string/version"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_distance" />

        <TextView
            android:id="@+id/textView_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0 km"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imv_type_ruta"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/ic_time" />

        <TextView
            android:id="@+id/texView_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0 min"
            android:textSize="20dp" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/estatus_icon"
            android:textAlignment="center"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_status_petition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/petitions"
                android:background="@color/colorGrey"
                android:layout_margin="2dp"
                />

            <Button
                android:id="@+id/button_status_occupied"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/occupied"
                android:background="@color/colorGrey"
                android:layout_margin="2dp"
                />

        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold" />

    </ScrollView>
</LinearLayout>
