<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taxiconductor.View.ViewLogin.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView_logo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="35dp"
                android:contentDescription=""
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:ems="60"
                    android:hint="@string/email"
                    android:inputType=""
                    tools:ignore="RtlHardcoded,TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="60"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/colorText"
                android:theme="@style/MyButton" />

            <TextView
                android:id="@+id/textView_remember_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/remember_password"
                android:textSize="15dp"
                android:typeface="sans"
                tools:ignore="SpUsage" />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/development_for"
                        android:textSize="10dp"
                        android:gravity="center"

                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true" />
                    <ImageView
                        android:scaleType="fitXY"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/ic_virtual"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>